--- a/index.html
+++ b/index.html
@@ -65,30 +65,39 @@
 			</header>
 			<main class="main">
 				<section class="hero">
-					<div class="container">
-						<div class="hero__inner">
-							<div class="hero__content">
-								<h1 class="hero__title">Build stunning websites & apps.</h1>
-								<p class="hero__description">
-									Create live segments and target the right people for messages
-									based on their behaviors.
-								</p>
-								<div class="hero__buttons">
-									<button class="button-blue">Get Started</button>
-									<button class="button-white">Learn More</button>
-								</div>
+					<div class="hero__inner">
+						<div class="hero__content">
+							<h1 class="hero__title">Build stunning websites & apps.</h1>
+							<p class="hero__description">
+								Create live segments and target the right people for messages
+								based on their behaviors.
+							</p>
+							<div class="hero__buttons">
+								<button class="button-blue">Get Started</button>
+								<button class="button-white">Learn More</button>
 							</div>
-							<div class="hero__image">
-								<img
-									class="hero__img"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
-									alt="Image	ouch"
-								/>
-							</div>
+						</div>
+						<div class="hero__image">
+							<img
+								class="hero__img"
+								src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
+								alt="Image	ouch"
+							/>
 						</div>
 					</div>
 				</section>
-				<section>Section 2</section>
+				<section class="about">
+					<div class="about__inner">
+						<div class="about__content">
+							<h2 class="about__title">What is it about?</h2>
+							<p class="about__description">Building a website for a startup that looks amazing is not a rocket science anymore.</p>
+						</div>
+						<div class="about__content">
+							<h2 class="about__title">Who is it for?</h2>
+							<p class="about__description">Startups, small companies and teams, entrepreneurs and web developers.</p>
+						</div>
+					</div>
+				</section>
 				<section>Section 3</section>
 				<section>Section 4</section>
 			</main>
