--- a/index.html
+++ b/index.html
@@ -90,15 +90,80 @@
 					<div class="about__inner">
 						<div class="about__content">
 							<h2 class="about__title">What is it about?</h2>
-							<p class="about__description">Building a website for a startup that looks amazing is not a rocket science anymore.</p>
+							<p class="about__description">
+								Building a website for a startup that looks amazing is not a
+								rocket science anymore.
+							</p>
 						</div>
 						<div class="about__content">
 							<h2 class="about__title">Who is it for?</h2>
-							<p class="about__description">Startups, small companies and teams, entrepreneurs and web developers.</p>
+							<p class="about__description">
+								Startups, small companies and teams, entrepreneurs and web
+								developers.
+							</p>
 						</div>
 					</div>
 				</section>
-				<section>Section 3</section>
+				<section class="partners">
+					<div class="partners__inner">
+						<ul class="partners__list">
+							<li class="partners__list-item">
+								<a class="partners__link" href="#">
+									<img
+										class="partners__link-logo"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+										alt="New York Times"
+									/>
+								</a>
+							</li>
+							<li class="partners__list-item">
+								<a class="partners__link" href="#">
+									<img
+										class="partners__link-logo"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+										alt="Forbes"
+									/>
+								</a>
+							</li>
+							<li class="partners__list-item">
+								<a class="partners__link" href="#">
+									<img
+										class="partners__link-logo"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+										alt="Apple"
+									/>
+								</a>
+							</li>
+							<li class="partners__list-item">
+								<a class="partners__link" href="#">
+									<img
+										class="partners__link-logo"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+										alt="Mashable"
+									/>
+								</a>
+							</li>
+							<li class="partners__list-item">
+								<a class="partners__link" href="#">
+									<img
+										class="partners__link-logo"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+										alt="WSJ"
+									/>
+								</a>
+							</li>
+							<li class="partners__list-item">
+								<a class="partners__link" href="#">
+									<img
+										class="partners__link-logo"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+										alt="Google"
+									/>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</section>
 				<section>Section 4</section>
 			</main>
 			<footer class="footer">Footer</footer>
