--- a/index.html
+++ b/index.html
@@ -164,7 +164,37 @@
 						</ul>
 					</div>
 				</section>
-				<section>Section 4</section>
+				<section class="features">
+					<div class="features__inner">
+						<div class="features__content">
+							<span class="features__decor-text">Features</span>
+							<h2 class="features__title">Easily find leads and customers</h2>
+							<p class="features__description">
+								Send one-off and automated email, push, and in-app messages to
+								people. Create better stories.
+							</p>
+							<h3 class="features__subtitle">Acquire new customers</h3>
+							<p class="features__text">
+								Everything you need to start building – including open-source
+								code, documentation.
+							</p>
+							<div class="features__divider features__divider--blue"></div>
+							<span class="features__info">Engage users</span>
+							<div class="features__divider"></div>
+							<span class="features__info">Develop across platforms</span>
+							<div class="features__decor"></div>
+							<img
+								class="features__decor-img"
+								src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
+								alt="Hidden ouch"
+							/>
+						</div>
+						<img
+							src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png"
+							alt="In Space"
+						/>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">Footer</footer>
 		</div>
