--- a/index.html
+++ b/index.html
@@ -195,6 +195,44 @@
 						/>
 					</div>
 				</section>
+				<section class="manage">
+					<div class="manage__images">
+						<img
+							class="manage__image-wheel"
+							src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
+							alt="wheel image"
+						/>
+						<span class="manage__image-text"
+							>Connect with customers and grow faster</span
+						>
+					</div>
+					<div class="manage__content">
+						<div class="manage__content-inner">
+							<span class="manage__content-decor">Team Inbox</span>
+							<h2 class="manage__content-title">Manage conversations</h2>
+							<p class="manage__content-description">
+								One place to manage and respond to all conversations with leads
+								and users. Receive messages from leads.
+							</p>
+						</div>
+						<blockquote class="manage__content-blockquote">
+							<span class="content-blockquote__text">“Great widgets. Great selection. Great design and <strong> easy to implement. </strong> Definitely a huge time saver for a web developer!”</span>
+							<div class="content-blockquote__info">
+								<img
+									class="content-blockquote__info-avatar"
+									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-avatar.png"
+									alt="avatar"
+								/>
+								<div class="content-blockquote__info-text">
+									<cite class="info-text__author">Viella Malkovich </cite>
+									<span class="info-text__position"
+										>Creative Director at Johnson</span
+									>
+								</div>
+							</div>
+						</blockquote>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">Footer</footer>
 		</div>
