--- a/index.html
+++ b/index.html
@@ -258,10 +258,6 @@
 			<footer class="footer">Footer</footer>
 		</div>
 
-		<script src="./js/index.js">
-
-
-	
-		</script>
+		<script src="./js/index.js"></script>
 	</body>
 </html>
