--- a/index.html
+++ b/index.html
@@ -254,6 +254,33 @@
 						</blockquote>
 					</div>
 				</section>
+				<section class='communicate'>
+					<div class="communicate__inner">
+						<div class='communicate__content'>
+							<div class='communicate__content-wrap'>
+								<span class='communicate__content-decor'>Communicate Better</span>
+								<h2 class='communicate__content-title'>Built for busy small teams</h2>
+								<p class='communicate__content-description'>Three products that can be used independently or combined together for your company’s needs.</p>
+								<button class="button-blue">Get Started</button>
+							</div>
+							<img class='communicate__content-image' src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png" alt="A better way to acquire new users">
+						</div>
+						<div class="communicate__list">
+							<div class='communicate__list-item'>
+								<p class='list-item__desc'><strong>Subscriptions.</strong> Foundation works with the tools and services you already use every day.</p>
+								<a class='list-item__link' href="#">Learn more about subscriptions</a>
+							</div>
+							<div class='communicate__list-item'>
+								<p class='list-item__desc'><strong>Flexible Hours.</strong> Get started with our simple snippet of JavaScript or easy to install SDKs for iOS and Android.</p>
+								<a class='list-item__link' href='#'>Get more info about hours</a>
+							</div>
+							<div class='communicate__list-item'>
+								<p class='list-item__desc'><strong>Fast Communication.</strong> We offer measures like 2FA and SSO to ensure the safety of your data.</p>
+								<a class='list-item__link' href='#'>Communication guidelines</a>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">Footer</footer>
 		</div>
