created audience section

--- a/index.html
+++ b/index.html
@@ -51,29 +51,54 @@
 								<li class="nav__list-item">
 									<a class="nav__list-link" href="#">Stories</a>
 								</li>
-								<li id='library' class="nav__list-item">
+								<li id="library" class="nav__list-item">
 									<a class="nav__list-link" href="#">Library</a>
 									<i class="fa-solid fa-chevron-down fa-sm"></i>
-									<div id='dropdown' class="dropdown">
+									<div id="dropdown" class="dropdown">
 										<ul class="dropdown__list">
-												<li class='dropdown__list-item'><a class="dropdown__list-link" href="#">
-													<span class='dropdown__list-title dropdown__list-title--active'>Acquire Users</span>
-													<p class='dropdown__list-description'>Work with the tools and services you use.</p>
-												</a></li>
-												<li class='dropdown__list-item'><a  class="dropdown__list-link" href="#">
-													<span class='dropdown__list-title'>Engage Customers</span>
-													<p class='dropdown__list-description'>Get started with our simple snippet of JavaScript.</p>
-												</a></li>
-												<li class='dropdown__list-item'><a class="dropdown__list-link" href="#">
-													<span class='dropdown__list-title'>Book Appointments</span>
-													<p class='dropdown__list-description'>We offer measures like 2FA to ensure the safety.</p>
-												</a></li>
-												<li class='dropdown__list-item'><a class="dropdown__list-link" href="#">
-													<span class='dropdown__list-title'>Generate Leads</span>
-													<p class='dropdown__list-description'>Become a better designer by learning this courses.</p>
-												</a></li>
+											<li class="dropdown__list-item">
+												<a class="dropdown__list-link" href="#">
+													<span
+														class="dropdown__list-title dropdown__list-title--active"
+														>Acquire Users</span
+													>
+													<p class="dropdown__list-description">
+														Work with the tools and services you use.
+													</p>
+												</a>
+											</li>
+											<li class="dropdown__list-item">
+												<a class="dropdown__list-link" href="#">
+													<span class="dropdown__list-title"
+														>Engage Customers</span
+													>
+													<p class="dropdown__list-description">
+														Get started with our simple snippet of JavaScript.
+													</p>
+												</a>
+											</li>
+											<li class="dropdown__list-item">
+												<a class="dropdown__list-link" href="#">
+													<span class="dropdown__list-title"
+														>Book Appointments</span
+													>
+													<p class="dropdown__list-description">
+														We offer measures like 2FA to ensure the safety.
+													</p>
+												</a>
+											</li>
+											<li class="dropdown__list-item">
+												<a class="dropdown__list-link" href="#">
+													<span class="dropdown__list-title"
+														>Generate Leads</span
+													>
+													<p class="dropdown__list-description">
+														Become a better designer by learning this courses.
+													</p>
+												</a>
+											</li>
 										</ul>
-								</div>
+									</div>
 								</li>
 							</ul>
 						</nav>
@@ -237,7 +262,11 @@
 							</p>
 						</div>
 						<blockquote class="manage__content-blockquote">
-							<span class="content-blockquote__text">“Great widgets. Great selection. Great design and <strong> easy to implement. </strong> Definitely a huge time saver for a web developer!”</span>
+							<span class="content-blockquote__text"
+								>“Great widgets. Great selection. Great design and
+								<strong> easy to implement. </strong> Definitely a huge time
+								saver for a web developer!”</span
+							>
 							<div class="content-blockquote__info">
 								<img
 									class="content-blockquote__info-avatar"
@@ -254,30 +283,115 @@
 						</blockquote>
 					</div>
 				</section>
-				<section class='communicate'>
+				<section class="communicate">
 					<div class="communicate__inner">
-						<div class='communicate__content'>
-							<div class='communicate__content-wrap'>
-								<span class='communicate__content-decor'>Communicate Better</span>
-								<h2 class='communicate__content-title'>Built for busy small teams</h2>
-								<p class='communicate__content-description'>Three products that can be used independently or combined together for your company’s needs.</p>
+						<div class="communicate__content">
+							<div class="communicate__content-wrap">
+								<span class="communicate__content-decor"
+									>Communicate Better</span
+								>
+								<h2 class="communicate__content-title">
+									Built for busy small teams
+								</h2>
+								<p class="communicate__content-description">
+									Three products that can be used independently or combined
+									together for your company’s needs.
+								</p>
 								<button class="button-blue">Get Started</button>
 							</div>
-							<img class='communicate__content-image' src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png" alt="A better way to acquire new users">
+							<img
+								class="communicate__content-image"
+								src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png"
+								alt="A better way to acquire new users"
+							/>
 						</div>
 						<div class="communicate__list">
-							<div class='communicate__list-item'>
-								<p class='list-item__desc'><strong>Subscriptions.</strong> Foundation works with the tools and services you already use every day.</p>
-								<a class='list-item__link' href="#">Learn more about subscriptions</a>
+							<div class="communicate__list-item">
+								<p class="list-item__desc">
+									<strong>Subscriptions.</strong> Foundation works with the
+									tools and services you already use every day.
+								</p>
+								<a class="list-item__link" href="#"
+									>Learn more about subscriptions</a
+								>
 							</div>
-							<div class='communicate__list-item'>
-								<p class='list-item__desc'><strong>Flexible Hours.</strong> Get started with our simple snippet of JavaScript or easy to install SDKs for iOS and Android.</p>
-								<a class='list-item__link' href='#'>Get more info about hours</a>
+							<div class="communicate__list-item">
+								<p class="list-item__desc">
+									<strong>Flexible Hours.</strong> Get started with our simple
+									snippet of JavaScript or easy to install SDKs for iOS and
+									Android.
+								</p>
+								<a class="list-item__link" href="#"
+									>Get more info about hours</a
+								>
 							</div>
-							<div class='communicate__list-item'>
-								<p class='list-item__desc'><strong>Fast Communication.</strong> We offer measures like 2FA and SSO to ensure the safety of your data.</p>
-								<a class='list-item__link' href='#'>Communication guidelines</a>
+							<div class="communicate__list-item">
+								<p class="list-item__desc">
+									<strong>Fast Communication.</strong> We offer measures like
+									2FA and SSO to ensure the safety of your data.
+								</p>
+								<a class="list-item__link" href="#">Communication guidelines</a>
 							</div>
+						</div>
+					</div>
+				</section>
+				<section class="audience">
+					<div class="audience__inner">
+						<div class="audience__content">
+							<span class="audience__content-decor">Engage Visitors</span>
+							<h2 class="audience__content-title">Understand your audience</h2>
+							<p class="audience__content-description">
+								Early stage company? Eligible applicants get all of our products
+								for just $49 a month.
+							</p>
+							<div class="audience__content-buttons">
+								<button class="button-blue">Get Started</button>
+								<button class="button-white">Learn More</button>
+							</div>
+						</div>
+						<div class="audience__cards">
+							<ul class="cards__list">
+								<a class="cards__list-link" href="#">
+									<li class="cards__list-item">
+										<img
+											class="cards__list-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+											alt="user-role"
+										/>
+										<span class="cards__list-title">Developers</span>
+									</li>
+								</a>
+								<a class="cards__list-link" href="#">
+									<li class="cards__list-item">
+										<img
+											class="cards__list-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+											alt="user-role"
+										/>
+										<span class="cards__list-title">Entertainment</span>
+									</li>
+								</a>
+								<a class="cards__list-link" href="#">
+									<li class="cards__list-item">
+										<img
+											class="cards__list-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+											alt="user-role"
+										/>
+										<span class="cards__list-title">Athletes</span>
+									</li>
+								</a>
+								<a class="cards__list-link" href="">
+									<li class="cards__list-item">
+										<img
+											class="cards__list-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+											alt="user-role"
+										/>
+										<span class="cards__list-title">Creators</span>
+									</li>
+								</a>
+							</ul>
 						</div>
 					</div>
 				</section>
