--- a/index.html
+++ b/index.html
@@ -544,6 +544,10 @@
 						</div>
 						<div class="swiper-pagination"></div>
 					</div>
+					<img class="feedback__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png" alt="ballon">
+				</section>
+				<section>
+
 				</section>
 			</main>
 			<footer class="footer">
