added hiring sections and JS alert logis

--- a/index.html
+++ b/index.html
@@ -544,10 +544,52 @@
 						</div>
 						<div class="swiper-pagination"></div>
 					</div>
-					<img class="feedback__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png" alt="ballon">
+					<img
+						class="feedback__image"
+						src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png"
+						alt="ballon"
+					/>
 				</section>
-				<section>
-
+				<section class="hiring">
+					<div class="hiring__inner">
+						<div class="hiring__content">
+							<h2 class="hiring__title">We’re hiring</h2>
+							<p class="hiring__description">
+								We’re a team of lifelong learners. We’re equal parts left and
+								right brained.
+							</p>
+							<button class="button-blue">More about Company</button>
+						</div>
+						<ul class="hiring__list">
+							<li class="hiring__list-item">
+								<a href="#" class="hiring__list-link">
+									<span class="list-link__role">Front-End Developer</span>
+									<span class="list-link__location">Los Angeles / Remote</span>
+									<span class="list-link__arrow"
+										><i class="fas fa-chevron-right"></i
+									></span>
+								</a>
+							</li>
+							<li class="hiring__list-item">
+								<a href="#" class="hiring__list-link">
+									<span class="list-link__role">Community Manager</span>
+									<span class="list-link__location">New York / Full-Time</span>
+									<span class="list-link__arrow"
+										><i class="fas fa-chevron-right"></i
+									></span>
+								</a>
+							</li>
+							<li class="hiring__list-item">
+								<a href="#" class="hiring__list-link">
+									<span class="list-link__role">UX/UI Designer</span>
+									<span class="list-link__location">New York / Full-Time</span>
+									<span class="list-link__arrow"
+										><i class="fas fa-chevron-right"></i
+									></span>
+								</a>
+							</li>
+						</ul>
+					</div>
 				</section>
 			</main>
 			<footer class="footer">
