added subscription section

--- a/index.html
+++ b/index.html
@@ -591,8 +591,27 @@
 						</ul>
 					</div>
 				</section>
+				<section class='subscription'>
+					<div class="subscription__inner">
+						<img class="subscription__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png" alt="Illustration Window">
+						<div class="subscription__content">
+							<h2 class="subscription__title">Start your free trial.</h2>
+							<p class="subscription__description">Get notified about company updates, news and blog posts. We hate spam.</p>
+							<form class="subscription__form">
+								<label class="subscription__form-label sr-only" for="email"></label>
+								<input class="subscription__form-input" type="email" placeholder='Enter your email'>
+								<button type="submit" class="button-blue">Get Started</button>
+							</form>
+							<span class="subscription__text">
+								Free 14-day trial · Easy setup · Cancel any time. Check out <a class="subscription__link" href="">Terms of Use.</a>
+							</span>
+						</div>
+					</div>
+				</section>
 			</main>
 			<footer class="footer">
+				
+
 				<button id="scrollToTopBtn" class="scroll-top-btn">
 					<i class="fa fa-arrow-up"></i>
 				</button>
