--- a/index.html
+++ b/index.html
@@ -591,31 +591,164 @@
 						</ul>
 					</div>
 				</section>
-				<section class='subscription'>
+				<section class="subscription">
 					<div class="subscription__inner">
-						<img class="subscription__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png" alt="Illustration Window">
+						<img
+							class="subscription__image"
+							src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
+							alt="Illustration Window"
+						/>
 						<div class="subscription__content">
 							<h2 class="subscription__title">Start your free trial.</h2>
-							<p class="subscription__description">Get notified about company updates, news and blog posts. We hate spam.</p>
+							<p class="subscription__description">
+								Get notified about company updates, news and blog posts. We hate
+								spam.
+							</p>
 							<form class="subscription__form">
-								<label class="subscription__form-label sr-only" for="email"></label>
-								<input class="subscription__form-input" type="email" placeholder='Enter your email'>
+								<label
+									class="subscription__form-label sr-only"
+									for="email"
+								></label>
+								<input
+									class="subscription__form-input"
+									type="email"
+									placeholder="Enter your email"
+								/>
 								<button type="submit" class="button-blue">Get Started</button>
 							</form>
 							<span class="subscription__text">
-								Free 14-day trial · Easy setup · Cancel any time. Check out <a class="subscription__link" href="">Terms of Use.</a>
+								Free 14-day trial · Easy setup · Cancel any time. Check out
+								<a class="subscription__link" href="">Terms of Use.</a>
 							</span>
 						</div>
 					</div>
 				</section>
 			</main>
 			<footer class="footer">
-				
-
-				<button id="scrollToTopBtn" class="scroll-top-btn">
-					<i class="fa fa-arrow-up"></i>
-				</button>
+				<div class="footer__inner">
+					<div class="footer__top">
+						<div class="footer__info">
+							<div class="logo">
+								<a class="logo__link" href="/">
+									<img
+										class="logo__img"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
+										alt="Foundation Logo"
+									/>
+								</a>
+								<div class="logo__text">
+									<span class="logo__text-name">Foundation</span>
+									<span class="logo__text-description"
+										>Startup landing template</span
+									>
+								</div>
+							</div>
+							<p class="footer__info-desc">
+								Foundation is a website template for startups and small teams.
+								It helps to build a website in no time.
+							</p>
+							<div class="footer__info-apps">
+								<img
+									class="footer__info-app"
+									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
+									alt="App Store"
+								/>
+								<img
+									class="footer__info-app"
+									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
+									alt="Google Play"
+								/>
+							</div>
+						</div>
+						<div class="footer__links">
+							<h3 class="footer__links-title">Product</h3>
+							<ul class="footer__links-list">
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Acquire Users</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Content Marketing</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Website Templates</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Customer Management</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Virtual Inbox</a>
+								</li>
+							</ul>
+						</div>
+						<div class="footer__links">
+							<h3 class="footer__links-title">Company</h3>
+							<ul class="footer__links-list">
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">About Foundation</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Brand Guidelines</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Press Kit</a>
+								</li>
+								<li class="footer__links-item">
+									<a class="footer__links-link" href="#">Support</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="footer__bottom">
+						<div class="footer__bottom-info">
+							<ul class="footer__bottom-list">
+								<li class="footer__bottom-item">
+									<a class="footer__bottom-link" href="#">Terms</a>
+								</li>
+								<li class="footer__bottom-item">
+									<a class="footer__bottom-link" href="#">Privacy</a>
+								</li>
+								<li class="footer__bottom-item">
+									<a class="footer__bottom-link" href="#">License</a>
+								</li>
+							</ul>
+						</div>
+						<div class="footer__bottom-social">
+							<ul class="footer__social-list">
+								<li class="footer__social-item">
+									<a class="footer__social-link" href="#">
+										<img
+											class="footer__social-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
+											alt="twitter"
+										/>
+									</a>
+								</li>
+								<li class="footer__social-item">
+									<a class="footer__social-link" href="#">
+										<img
+											class="footer__social-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
+											alt="facebook"
+										/>
+									</a>
+								</li>
+								<li class="footer__social-item">
+									<a class="footer__social-link" href="#">
+										<img
+											class="footer__social-img"
+											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
+											alt="linkedin"
+										/>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</footer>
+			<button id="scrollToTopBtn" class="scroll-top-btn">
+				<i class="fa fa-arrow-up"></i>
+			</button>
 		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
