--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<a class="nav__list-link" href="#">Stories</a>
 								</li>
 								<li id="library" class="nav__list-item">
-									<a class="nav__list-link" href="#">Library</a>
+									<span class="nav__list-link" href="#">Library</span>
 									<i class="fa-solid fa-chevron-down fa-sm"></i>
 									<div id="dropdown" class="dropdown">
 										<ul class="dropdown__list">
