--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
 							<span class="sr-only"> Get Started </span>
 						</button>
 					</div>
+					<div class="header__audio">
+						<audio
+							id="myAudio"
+							src="./aydio/muz.mp3"
+							preload="auto"
+							loop
+						></audio>
+						<div class="audio-player">
+							<button class="play-btn" id="playButton" onclick="togglePlay()">
+								<i class="fa fa-play pulsating-icon"></i>
+							</button>
+						</div>
+					</div>
 				</div>
 			</header>
 			<main class="main">
