--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 							src="./aydio/muz.mp3"
 							preload="auto"
 							loop
+							autoplay
 						></audio>
 						<div class="audio-player">
 							<button class="play-btn" id="playButton" onclick="togglePlay()">
@@ -638,124 +639,126 @@
 				</section>
 			</main>
 			<footer class="footer">
-				<div class="footer__inner">
-					<div class="footer__top">
-						<div class="footer__info">
-							<div class="logo">
-								<a class="logo__link" href="/">
-									<img
-										class="logo__img"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
-										alt="Foundation Logo"
-									/>
-								</a>
-								<div class="logo__text">
-									<span class="logo__text-name">Foundation</span>
-									<span class="logo__text-description"
-										>Startup landing template</span
-									>
-								</div>
-							</div>
-							<p class="footer__info-desc">
-								Foundation is a website template for startups and small teams.
-								It helps to build a website in no time.
-							</p>
-							<div class="footer__info-apps">
+				<div class="footer__top">
+					<div class="footer__info">
+						<div class="logo">
+							<a class="logo__link" href="/">
 								<img
-									class="footer__info-app"
+									class="logo__img"
+									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
+									alt="Foundation Logo"
+								/>
+							</a>
+							<div class="logo__text">
+								<span class="logo__text-name">Foundation</span>
+								<span class="logo__text-description"
+									>Startup landing template</span
+								>
+							</div>
+						</div>
+						<p class="footer__info-desc">
+							Foundation is a website template for startups and small teams. It
+							helps to build a website in no time.
+						</p>
+						<div class="footer__info-apps">
+							<a class='footer__info-apps-link' href="#">
+								<img
+									class="footer__info-apps-img"
 									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
 									alt="App Store"
 								/>
+							</a>
+							<a class='footer__info-apps-link' href="#">
 								<img
-									class="footer__info-app"
+									class="footer__info-apps-img"
 									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
 									alt="Google Play"
 								/>
-							</div>
-						</div>
-						<div class="footer__links">
-							<h3 class="footer__links-title">Product</h3>
-							<ul class="footer__links-list">
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Acquire Users</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Content Marketing</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Website Templates</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Customer Management</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Virtual Inbox</a>
-								</li>
-							</ul>
-						</div>
-						<div class="footer__links">
-							<h3 class="footer__links-title">Company</h3>
-							<ul class="footer__links-list">
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">About Foundation</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Brand Guidelines</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Press Kit</a>
-								</li>
-								<li class="footer__links-item">
-									<a class="footer__links-link" href="#">Support</a>
-								</li>
-							</ul>
+							</a>
 						</div>
 					</div>
-					<div class="footer__bottom">
-						<div class="footer__bottom-info">
-							<ul class="footer__bottom-list">
-								<li class="footer__bottom-item">
-									<a class="footer__bottom-link" href="#">Terms</a>
-								</li>
-								<li class="footer__bottom-item">
-									<a class="footer__bottom-link" href="#">Privacy</a>
-								</li>
-								<li class="footer__bottom-item">
-									<a class="footer__bottom-link" href="#">License</a>
-								</li>
-							</ul>
-						</div>
-						<div class="footer__bottom-social">
-							<ul class="footer__social-list">
-								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">
-										<img
-											class="footer__social-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
-											alt="twitter"
-										/>
-									</a>
-								</li>
-								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">
-										<img
-											class="footer__social-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
-											alt="facebook"
-										/>
-									</a>
-								</li>
-								<li class="footer__social-item">
-									<a class="footer__social-link" href="#">
-										<img
-											class="footer__social-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
-											alt="linkedin"
-										/>
-									</a>
-								</li>
-							</ul>
-						</div>
+					<div class="footer__links">
+						<h3 class="footer__links-title">Product</h3>
+						<ul class="footer__links-list">
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Acquire Users</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Content Marketing</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Website Templates</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Customer Management</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Virtual Inbox</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer__links">
+						<h3 class="footer__links-title">Company</h3>
+						<ul class="footer__links-list">
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">About Foundation</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Brand Guidelines</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Press Kit</a>
+							</li>
+							<li class="footer__links-item">
+								<a class="footer__links-link" href="#">Support</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer__bottom">
+					<div class="footer__bottom-info">
+						<ul class="footer__bottom-list">
+							<li class="footer__bottom-item">
+								<a class="footer__bottom-link" href="#">Terms</a>
+							</li>
+							<li class="footer__bottom-item">
+								<a class="footer__bottom-link" href="#">Privacy</a>
+							</li>
+							<li class="footer__bottom-item">
+								<a class="footer__bottom-link" href="#">License</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer__bottom-social">
+						<ul class="footer__social-list">
+							<li class="footer__social-item">
+								<a class="footer__social-link" href="#">
+									<img
+										class="footer__social-img"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-twitter.png"
+										alt="twitter"
+									/>
+								</a>
+							</li>
+							<li class="footer__social-item">
+								<a class="footer__social-link" href="#">
+									<img
+										class="footer__social-img"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-fb.png"
+										alt="facebook"
+									/>
+								</a>
+							</li>
+							<li class="footer__social-item">
+								<a class="footer__social-link" href="#">
+									<img
+										class="footer__social-img"
+										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/social-linkedIn.png"
+										alt="linkedin"
+									/>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</footer>
