--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </li>
               </ul>
             </nav>
-            <button class="button-blue">
+            <button class="button-blue button-blue--mobile">
               Get Started
               <span class="sr-only"> Get Started </span>
             </button>
@@ -130,7 +130,7 @@
         </div>
       </header>
       <main class="main">
-        <!-- <section class="hero">
+        <section class="hero">
 					<div class="hero__inner">
 						<div class="hero__content">
 							<h1 class="hero__title">Build stunning websites & apps.</h1>
@@ -151,7 +151,7 @@
 							/>
 						</div>
 					</div>
-				</section> -->
+				</section>
         <!-- <section class="about">
 					<div class="about__inner">
 						<div class="about__content">
