fix BEM for about

--- a/index.html
+++ b/index.html
@@ -152,24 +152,24 @@
 						</div>
 					</div>
 				</section>
-        <!-- <section class="about">
+        <section class="about">
 					<div class="about__inner">
 						<div class="about__content">
-							<h2 class="about__title">What is it about?</h2>
-							<p class="about__description">
+							<h2 class="about__content-title">What is it about?</h2>
+							<p class="about__content-description">
 								Building a website for a startup that looks amazing is not a
 								rocket science anymore.
 							</p>
 						</div>
 						<div class="about__content">
-							<h2 class="about__title">Who is it for?</h2>
-							<p class="about__description">
+							<h2 class="about__content-title">Who is it for?</h2>
+							<p class="about__content-description">
 								Startups, small companies and teams, entrepreneurs and web
 								developers.
 							</p>
 						</div>
 					</div>
-				</section> -->
+				</section>
         <!-- <section class="partners">
 					<div class="partners__inner">
 						<ul class="partners__list">
