--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
             </button>
           </div>
           <div class="header__audio">
-            <audio id="myAudio" src="./aydio/muz.mp3" preload="auto" loop autoplay></audio>
+            <audio id="myAudio" src="./aydio/muz.mp3" preload="auto" loop></audio>
             <div class="audio-player">
               <button class="play-btn" id="playButton" onclick="togglePlay()">
                 <i class="fa fa-play pulsating-icon"></i>
               </button>
             </div>
           </div>
-          <div class="mobile-menu-icon" onclick='toggleMobileMenu()'>
-            <i id="menuIcon" class='fa fa-bars'></i>
+          <div class="mobile-menu-icon" onclick="toggleMobileMenu()">
+            <i id="menuIcon" class="fa fa-bars"></i>
           </div>
         </div>
         <div class="mobile-menu">
@@ -131,105 +131,101 @@
       </header>
       <main class="main">
         <section class="hero">
-					<div class="hero__inner">
-						<div class="hero__content">
-							<h1 class="hero__title">Build stunning websites & apps.</h1>
-							<p class="hero__description">
-								Create live segments and target the right people for messages
-								based on their behaviors.
-							</p>
-							<div class="hero__buttons">
-								<button class="button-blue">Get Started</button>
-								<button class="button-white">Learn More</button>
-							</div>
-						</div>
-						<div class="hero__image">
-							<img
-								class="hero__img"
-								src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
-								alt="Image	ouch"
-							/>
-						</div>
-					</div>
-				</section>
+          <div class="hero__inner">
+            <div class="hero__content">
+              <h1 class="hero__title">Build stunning websites & apps.</h1>
+              <p class="hero__description">
+                Create live segments and target the right people for messages based on their
+                behaviors.
+              </p>
+              <div class="hero__buttons">
+                <button class="button-blue">Get Started</button>
+                <button class="button-white">Learn More</button>
+              </div>
+            </div>
+            <div class="hero__image">
+              <img
+                class="hero__img"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/ouch.png"
+                alt="Image	ouch"
+              />
+            </div>
+          </div>
+        </section>
         <section class="about">
-					<div class="about__inner">
-						<div class="about__content">
-							<h2 class="about__content-title">What is it about?</h2>
-							<p class="about__content-description">
-								Building a website for a startup that looks amazing is not a
-								rocket science anymore.
-							</p>
-						</div>
-						<div class="about__content">
-							<h2 class="about__content-title">Who is it for?</h2>
-							<p class="about__content-description">
-								Startups, small companies and teams, entrepreneurs and web
-								developers.
-							</p>
-						</div>
-					</div>
-				</section>
-        <!-- <section class="partners">
-					<div class="partners__inner">
-						<ul class="partners__list">
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
-										alt="New York Times"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
-										alt="Forbes"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
-										alt="Apple"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
-										alt="Mashable"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
-										alt="WSJ"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
-										alt="Google"
-									/>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</section> -->
+          <div class="about__inner">
+            <div class="about__content">
+              <h2 class="about__content-title">What is it about?</h2>
+              <p class="about__content-description">
+                Building a website for a startup that looks amazing is not a rocket science anymore.
+              </p>
+            </div>
+            <div class="about__content">
+              <h2 class="about__content-title">Who is it for?</h2>
+              <p class="about__content-description">
+                Startups, small companies and teams, entrepreneurs and web developers.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="partners">
+          <ul class="partners__list">
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+                  alt="New York Times"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+                  alt="Forbes"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+                  alt="Apple"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+                  alt="Mashable"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+                  alt="WSJ"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+                  alt="Google"
+                />
+              </a>
+            </li>
+          </ul>
+        </section>
         <!-- <section class="features">
 					<div class="features__content">
 						<span class="features__content-subtitle">Features</span>
