added adaptive for features section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </li>
           </ul>
         </section>
-        <!-- <section class="features">
+        <section class="features">
 					<div class="features__content">
 						<span class="features__content-subtitle">Features</span>
 						<h2 class="features__content-title">
@@ -254,12 +254,15 @@
 							alt="Hidden ouch"
 						/>
 					</div>
-					<img
-						class="features__image"
-						src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png"
-						alt="In Space"
-					/>
-				</section> -->
+					<figure>
+						<picture>
+								<source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png" type="image/png" media="(max-width: 1320px)">
+								<img class="features__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png" alt="In Space">
+						</picture>
+						<figcaption class="features__image-caption">A better way to acquire new users</figcaption>
+				</figure>
+				
+				</section>
         <!-- <section class="manage">
 					<div class="manage__wheel">
 						<img
